--- a/Base64.csproj
+++ b/Base64.csproj
@@ -7,6 +7,7 @@
     <UseWPF>true</UseWPF>
     <ApplicationIcon>favicon.ico</ApplicationIcon>
     <RuntimeIdentifier>win-x86</RuntimeIdentifier>
+    <PublishSingleFile>true</PublishSingleFile>
     <DebugType>none</DebugType>
   </PropertyGroup>
 
