--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -1,9 +1,9 @@
-name: Publish X86 Release
+name: Publish Windows X86 Release
 
 on:
   push:
     tags:
-      - "Base64.v*"
+      - "v*"
 
 env:
   PROJECT_PATH: Base64.csproj
@@ -24,11 +24,20 @@ jobs:
       
       - run: dotnet publish ${{ env.PROJECT_PATH }} -c Release --no-build
       
-      - uses: edgarrc/action-7z@v1
-        with:
-          args: 7z a -t7z -mx=9 Base64.v*.7z bin/Release/net6.0-windows/win-x86/publish/*
+      - name: Compress 7z
+        run: |
+          cd bin/Release/net6.0-windows/win-x86/publish
+          7z a -t7z -m0=lzma2 -mx=9 -mfb=64 -md=64m -ms=on Base64.v*.7z *
       
       - uses: actions/upload-artifact@v3
         with:
           name: Base64.v*
           path: bin/Release/net6.0-windows/win-x86/publish/*.7z
+      - name: Upload Release
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: bin/Release/net6.0-windows/win-x86/publish/*.7z
+          tag: ${{ github.ref }}
+          file_glob: true
+          prerelease: true
