--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -31,7 +31,7 @@ jobs:
       
       - uses: actions/upload-artifact@v3
         with:
-          name: Base64.v*
+          name: Base64
           path: bin/Release/net6.0-windows/win-x86/publish/*.7z
       - name: Upload Release
         uses: svenstaro/upload-release-action@v2
