--- a/Base64.csproj
+++ b/Base64.csproj
@@ -8,6 +8,7 @@
     <ApplicationIcon>favicon.ico</ApplicationIcon>
     <RuntimeIdentifier>win-x86</RuntimeIdentifier>
     <PublishSingleFile>true</PublishSingleFile>
+    <SelfContained>true</SelfContained>
     <DebugType>none</DebugType>
   </PropertyGroup>
 
